--- a/src/app/components/navbar/navbar.less
+++ b/src/app/components/navbar/navbar.less
@@ -1,6 +1,17 @@
 .acme-navbar-text {
   color: white;
 }
+
+.customNavbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+
+.main {
+  margin-top: 70px;
+}
+
 .cart {
   display: inline-block;
   color: #5AADBB;
