--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -114,15 +114,19 @@
     }
     .price {
       padding: 10px 0;
-      color: rgba(0,0,0,.8);
+      color: rgba(0, 0, 0, .8);
       .shipping {
-        color: rgba(0,0,0,.6);
+        color: rgba(0, 0, 0, .6);
       }
     }
   }
 }
 
 @media (max-width: 500px) {
+  .navigation {
+    padding-left: 20px;
+  }
+
   .mainContainer .left-toolbar {
     width: 50vw;
     left: -50vw;
