--- a/src/app/cart/cart.less
+++ b/src/app/cart/cart.less
@@ -35,6 +35,10 @@
     background-color: #ff4736;
     color: #000;
     transition: all 0.3s ease;
+    &:disabled {
+      background-color: grey !important;
+      color: #fff !important;
+    }
     &:hover {
       background-color: #000;
       color: #ff4736;
